--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 </div> 
 <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
 <script src="form.js"></script>
-
+<script src="config.js"></script>
 </body>
 </html>
